--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "yiisoft/yii2": "2.0.*",
         "solutosoft/yii2-plugin": "*",
-        "bower-asset/jQuery-QueryBuilder": "2.4.*"
+        "bower-asset/jQuery-QueryBuilder": "2.5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
